[package]
name = "vk-mem"
version = "0.4.0"
authors = ["Graham Wihlidal <graham@wihlidal.ca>", "Zhixing Zhang <me@neoto.xin>"]
description = "Rust ffi bindings and idiomatic wrapper for AMD Vulkan Memory Allocator (VMA)"
homepage = "https://github.com/gwihlidal/vk-mem-rs"
repository = "https://github.com/gwihlidal/vk-mem-rs"
documentation = "https://docs.rs/vk-mem"
readme = "README.md"
keywords = ["vulkan", "vk", "ash", "memory", "allocator"]
categories = ["api-bindings", "rendering", "rendering::engine", "rendering::graphics-api", ]
license = "MIT/Apache-2.0"
build = "build.rs"
include = [
    "src/*.rs",
    "build.rs",
    "Cargo.toml",
    "vendor/VulkanMemoryAllocator/include/vk_mem_alloc.h",
    "vendor/Vulkan-Headers/include",
    "wrapper.cpp",
]
edition = "2021"

[badges]
travis-ci = { repository = "gwihlidal/vk-mem-rs" }
maintenance = { status = "actively-developed" }

[dependencies]
vulkanite = { version = "0.0.11", features = [
    "version_1_1",
    "ext_dedicated_allocation",
    "ext_bind_memory2",
    "ext_buffer_device_address",
    "ext_memory_priority",
    "ext_maintenance4",
    "ext_create_renderpass2",
    "ext_depth_stencil_resolve",
    "ext_dynamic_rendering",
    "ext_maintenance5",
]}
bitflags = "2.5"

[build-dependencies]
cc = "1.0"

[build-dependencies.bindgen]
version = "0.69"
optional = true

[profile.release]
lto = true
opt-level = 3
codegen-units = 1

[features]
default = []
generate_bindings=["bindgen"]
recording=[]
